<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="40dp"
    android:paddingTop="50dp"
    android:paddingRight="40dp"
    android:paddingBottom="50dp"
    android:id="@+id/add_event_page"
    tools:context=".AddEvent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/back_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    app:backgroundTint="#FFFFFF"
                    app:cornerRadius="16dp"
                    app:icon="?attr/homeAsUpIndicator"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="24dp"
                    app:iconTint="@color/black"
                    app:rippleColor="#00FFFFFF"
                    app:strokeColor="#000000"
                    app:strokeWidth="2dp" />

                <TextView
                    android:id="@+id/evadd_title"
                    android:layout_width="193dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="12dp"
                    android:text="Add Event"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxBackgroundColor="@android:color/background_light"
                    app:boxStrokeColor="@color/quantum_grey"
                    app:cursorColor="@color/quantum_grey"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/evadd_txt_name"
                        android:singleLine="true"
                        android:scrollHorizontally="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="3dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Description" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxBackgroundColor="@android:color/background_light"
                    app:boxStrokeColor="@color/quantum_grey"
                    app:cursorColor="@color/quantum_grey"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/evadd_txt_desc"
                        android:singleLine="true"
                        android:scrollHorizontally="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="3dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Location" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxBackgroundColor="@android:color/background_light"
                    app:boxStrokeColor="@color/quantum_grey"
                    app:cursorColor="@color/quantum_grey"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp">

                    <AutoCompleteTextView
                        android:id="@+id/evadd_txt_loc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textSize="16dp"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:scrollHorizontally="true"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="3dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Starts" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxBackgroundColor="@android:color/background_light"
                    app:boxStrokeColor="@color/quantum_grey"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/evadd_txt_start"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:editable="false" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="3dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ends" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxBackgroundColor="@android:color/background_light"
                    app:boxStrokeColor="@color/quantum_grey"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/evadd_txt_end"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:editable="false" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Maximum Attendees" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">

                        <Switch
                            android:id="@+id/evadd_atd_lim"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical" />

                        <TextView
                            android:id="@+id/evadd_atd_lim_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="No Limit"
                            android:paddingRight="10dp"/>

                    </LinearLayout>

                    <EditText
                        android:id="@+id/evadd_atd_lim_num"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <com.google.android.material.chip.Chip
                    android:id="@+id/evadd_chip_upload"
                    android:layout_width="165dp"
                    android:layout_height="63dp"
                    android:clickable="true"
                    android:text="Attach Poster File"
                    app:chipBackgroundColor="@color/white"
                    app:chipIcon="@android:drawable/ic_menu_gallery"
                    app:rippleColor="#FFFFFF" />

                <ImageView
                    android:id="@+id/previewPic"
                    android:layout_width="80dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/close_btn_x" />

            </LinearLayout>

            <Button
                android:id="@+id/evadd_btn_add"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/add"
                android:text="Add Event"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>